Using accompanist library for coil and animating scroll

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LearningCompose</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_compose_layout">ComposeLayoutActivity</string>
+    <string name="title_activity_list">ListActivity</string>
 </resources>
