--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_compose_layout">ComposeLayoutActivity</string>
     <string name="title_activity_list">ListActivity</string>
+    <string name="title_activity_custom_layout">CustomLayoutActivity</string>
 </resources>
