--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_compose_layout">ComposeLayoutActivity</string>
     <string name="title_activity_list">ListActivity</string>
     <string name="title_activity_custom_layout">CustomLayoutActivity</string>
+    <string name="title_activity_constraint_layout">ConstraintLayoutActivity</string>
 </resources>
